[package]
name = "made-up"
version = "0.1.0"
authors = ["Dylan Maccora <maccora17@gmail.com>"]

[dependencies]
pulldown-cmark = "0.0.14"
# handlebars = "0.26"
walkdir = "1.*"
serde_json = "0.8.4"
rustc-serialize = "0.*"
log = "0.3"
serde = "1.0"
serde_yaml = "0.7"
serde_derive = "1.0.2"
clap = "2.24"
# tempdir = "0.3"

[dependencies.handlebars]
version = "0.24.1"
features = ["serde_type"]
